--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,12 @@ body {
 }
 
 a {
-    color: #ffb727;
+    color: #2f55d4;
     text-decoration: none;
 }
 
 a:hover {
-    color: #ffc85a;
+    color: #0d6efd;
     text-decoration: none;
 }
 
@@ -20,36 +20,6 @@ h4,
 h5,
 h6 {
     font-family: "Raleway", sans-serif;
-}
-
-/*--------------------------------------------------------------
-# Back to top button
---------------------------------------------------------------*/
-.back-to-top {
-    position: fixed;
-    visibility: hidden;
-    opacity: 0;
-    right: 15px;
-    bottom: 15px;
-    z-index: 996;
-    background: #ffb727;
-    width: 40px;
-    height: 40px;
-    border-radius: 4px;
-    transition: all 0.4s;
-}
-.back-to-top i {
-    font-size: 28px;
-    color: #fff;
-    line-height: 0;
-}
-.back-to-top:hover {
-    background: #ffc550;
-    color: #fff;
-}
-.back-to-top.active {
-    visibility: visible;
-    opacity: 1;
 }
 
 /*--------------------------------------------------------------
@@ -107,7 +77,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover > a {
-    color: #ffb727;
+    color: #0d6efd;
 }
 
 /**
@@ -187,7 +157,7 @@ h6 {
     font-size: 48px;
 }
 #hero .btn-scroll:hover {
-    color: #ffb727;
+    color: #2f55d4;
 }
 
 @media (min-width: 1024px) {
@@ -290,7 +260,7 @@ section {
 .about .content ul svg {
     font-size: 2rem;
     margin-right: 5px;
-    color: #ffb727;
+    color: #2f55d4;
     line-height: 0;
 }
 .about .content p:last-child {
@@ -302,7 +272,7 @@ section {
 .about .content .count-box i {
     display: block;
     font-size: 42px;
-    color: #ffb727;
+    color: #2f55d4;
     float: left;
     line-height: 0;
 }
@@ -342,20 +312,24 @@ section {
     margin-top: 30px;
 }
 .about .skills-content .progress {
-    height: 60px;
+    height: auto;
     display: block;
     background: none;
     border-radius: 0;
 }
 .about .skills-content .progress .skill {
     padding: 10px 0;
-    margin: 0 0 6px 0;
     text-transform: uppercase;
     display: block;
     font-weight: 700;
     font-family: "Raleway", sans-serif;
     color: #3b434a;
 }
+
+.about .skills-content .progress .skill .skill_icon {
+    font-size: 2rem;
+}
+
 .about .skills-content .progress .skill .val {
     float: right;
     font-style: normal;
@@ -367,7 +341,7 @@ section {
     width: 1px;
     height: 10px;
     transition: 0.9s;
-    background-color: #ffb727;
+    background-color: #2f55d4;
 }
 
 /*--------------------------------------------------------------
@@ -392,9 +366,10 @@ section {
 }
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-    color: #f3a200;
-    border-color: #ffb727;
+    color: #0d6efd;
+    border-color: #2f55d4;
 }
+
 .portfolio .portfolio-item {
     margin-bottom: 30px;
 }
@@ -428,25 +403,78 @@ section {
 }
 
 .portfolio .portfolio-item .portfolio-img .portfolio-overlay svg:hover {
-    color: #ffb727;
+    color: #2f55d4;
 }
 
 .portfolio .portfolio-item .portfolio-info {
     transition: all ease-in-out 0.3s;
     background: rgba(0, 0, 0, 0.5);
-    padding: 10px 15px;
+    padding: 1rem;
+    font-family: "Open Sans", sans-serif;
 }
 .portfolio .portfolio-item .portfolio-info h4 {
-    font-size: 18px;
+    font-family: "Open Sans", sans-serif;
+
     color: #fff;
+    margin: 0 0 0.142857143em;
+    font-size: 2rem;
+    transition: color 0.45s ease, border 0.45s ease;
     font-weight: 600;
-    margin-bottom: 0px;
+    line-height: 1;
+    border-bottom: 2px solid #2f55d4;
+    padding-bottom: 0.5em;
+}
+
+.portfolio .portfolio-item .portfolio-info__meta {
+    margin: 0.5rem 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.portfolio .portfolio-item .portfolio-info__meta span {
+    color: #fff;
+    display: flex;
+    align-items: center;
+    font-size: 0.8rem;
+    margin-bottom: 1rem;
 }
 .portfolio .portfolio-item .portfolio-info p {
     color: rgba(255, 255, 255, 0.8);
     font-size: 14px;
     margin-bottom: 0;
 }
+
+.portfolio .portfolio-item .portfolio-info__action {
+    margin-top: 1.1rem;
+    display: flex;
+    align-items: center;
+    font-size: 1.125rem;
+    line-height: 1.2;
+}
+
+.portfolio .portfolio-item .portfolio-info__action a {
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
+.portfolio .portfolio-item .portfolio-info__action a:hover {
+    color: #2f55d4;
+}
+
+.portfolio .portfolio-item .portfolio-info__action a svg {
+    transition: all 0.3s ease-in-out;
+    font-size: 2rem;
+}
+
+.portfolio .portfolio-item .portfolio-info__action a:hover svg {
+    transform: translateX(10px);
+    color: #2f55d4;
+}
+
 .portfolio .portfolio-item .portfolio-info .preview-link,
 .portfolio .portfolio-item .portfolio-info .details-link {
     right: 40px;
@@ -457,7 +485,7 @@ section {
 }
 .portfolio .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
-    color: #ffc041;
+    color: #2f55d4;
 }
 .portfolio .portfolio-item .portfolio-info .details-link {
     right: 10px;
@@ -493,7 +521,7 @@ section {
 
 .contact .info-box i.share svg {
     font-size: 2rem;
-    color: #ffb727;
+    color: #0d6efd;
 }
 
 .contact .info-box h3 {
@@ -530,8 +558,8 @@ section {
 }
 .contact .social-links a:hover {
     color: #fff;
-    border-color: #ffb727;
-    background: #ffb727;
+    border-color: rgba(13, 109, 253, 0.5);
+    background: rgba(13, 109, 253, 0.5);
 }
 .contact .email-form {
     box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
@@ -598,7 +626,7 @@ section {
     padding: 12px 15px;
 }
 .contact .email-form button[type="submit"] {
-    background: #ffb727;
+    background: #2f55d4;
     border: 0;
     padding: 10px 24px;
     color: #fff;
@@ -606,7 +634,7 @@ section {
     border-radius: 5px;
 }
 .contact .email-form button[type="submit"]:hover {
-    background: #ffc85a;
+    background: #0d6efd;
 }
 
 @keyframes animate-loading {
