--- a/src/App.css
+++ b/src/App.css
@@ -380,6 +380,9 @@ section {
 .portfolio .portfolio-item .portfolio-img {
     overflow: hidden;
     position: relative;
+    border-radius: 5px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
 .portfolio .portfolio-item .portfolio-img img {
     transition: all 0.8s ease-in-out;
@@ -417,7 +420,33 @@ section {
         0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
     padding: 1rem;
     font-family: "Open Sans", sans-serif;
+    border-radius: 5px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    transition: all 0.5s ease-in-out;
 }
+
+.portfolio .portfolio-item:hover .portfolio-info {
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.portfolio .portfolio-item:hover .portfolio-info h4 {
+    color: #fff;
+}
+
+.portfolio .portfolio-item:hover .portfolio-info__meta span {
+    color: #fff;
+}
+
+.portfolio .portfolio-item:hover .portfolio-info p {
+    color: #fff;
+}
+
+.portfolio .portfolio-item:hover .portfolio-info__action a {
+    color: #fff;
+}
+
 .portfolio .portfolio-item .portfolio-info h4 {
     font-family: "Open Sans", sans-serif;
     color: #2e3c40;
